<resources>
    <string name="app_name">DrawNavigationTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_toast">Toast</string>
    <string name="menu_stackView">StackView</string>
    <string name="menu_list">ListView</string>
    <string name="menu_map">Map</string>
    <string name="menu_web">Web</string>

</resources>