<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_toast"
            android:icon="@drawable/ic_menu_toast"
            android:title="@string/menu_toast" />
        <item
            android:id="@+id/nav_stackView"
            android:icon="@drawable/image1"
            android:title="@string/menu_stackView" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_list" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />

        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/ic_menu_web"
            android:title="@string/menu_web"/>

    </group>
</menu>